[package]
name = "is_i32"
version = "0.1.1"
edition = "2021"
description = "A blazingly fast algorithm to compute whether or not a value is an i32"
license = "MIT"
homepage = "https://github.com/rookieCookies/is_i32"
repository = "https://github.com/rookieCookies/is_i32"
documentation = "https://docs.rs/is_i32"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
